[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Theme/digital-7_35.tres" type="DynamicFont" id=2]
[ext_resource path="res://Theme/digital-7_25.tres" type="DynamicFont" id=3]
[ext_resource path="res://Theme/MainMenuTheme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/UI/SoundButton/SoundButton.tscn" type="PackedScene" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="TitleContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 24.0
margin_bottom = 80.0

[node name="Title" type="Label" parent="TitleContainer"]
margin_right = 1024.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 2 )
text = "Moon run"
align = 1

[node name="SubTitle" type="Label" parent="TitleContainer"]
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
text = "for godot wild jam #48"
align = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -64.0
margin_right = 47.0
margin_bottom = 64.0
custom_constants/separation = 16

[node name="Play" parent="ButtonContainer" instance=ExtResource( 5 )]
margin_right = 94.0
margin_bottom = 40.0
text = "play"

[node name="Options" parent="ButtonContainer" instance=ExtResource( 5 )]
margin_top = 56.0
margin_right = 94.0
margin_bottom = 96.0
disabled = true
text = "options"

[node name="Credits" parent="ButtonContainer" instance=ExtResource( 5 )]
margin_top = 112.0
margin_right = 94.0
margin_bottom = 152.0
disabled = true
text = "credits"

[node name="Exit" parent="ButtonContainer" instance=ExtResource( 5 )]
margin_top = 168.0
margin_right = 94.0
margin_bottom = 208.0
text = "exit"

[connection signal="pressed" from="ButtonContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="ButtonContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="ButtonContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="ButtonContainer/Exit" to="." method="_on_Exit_pressed"]
